syntax = "proto3";
package pbs.stream;
option go_package = "github.com/ninjahome/ninja-go/pbs/stream;stream";
import "contact.proto";

enum StreamMType{
  MTOnlineAck = 0;
  MTOnlineSync = 1;
  MTContactSync = 2;
  MTContactAck = 3;
  MTDevInfoSync = 4;
  MTDevInfoAck = 5;
}

message StreamMsg{
  StreamMType MTyp = 1;
  oneof payload{
    OnlineSync onlineSync= 2;
    OnlineMap onlineAck = 5;
    ContactSync contactSync = 3;
    ContactAck contactAck = 4;
    DevInfoSync diSync = 6;
    DevInfoAck diAck = 7;
  }
}

message OnlineSync{
  string nodeID = 1;
}

message DevInfoSync{
    string nodeId = 1;
}

message DevInfo{
    string uid = 1;
    string devToken = 2;
    int32  devTyp = 3;
}

message DevInfoAck{
    repeated DevInfo dis = 1;
}

message OnlineMap{
  repeated string UID = 1;
}

message ContactSync{
  string UID = 1;
  int64 SeqVer = 2;
}

message ContactAck{
  repeated  pbs.contact.ContactItem contacts = 1;
}
