syntax = "proto3";
package pbs;
option go_package = "github.com/ninjahome/ninja-go/pbs/websocket;websocket";

enum WsMsgType{
  Online = 0;
  OnlineACK = 1;
  ImmediateMsg = 2;
  PullUnread = 3;
  Offline = 4;
  UnreadAck = 5;
}

message WSOnline{
  string UID = 1;
  int64 UnixTime = 3;
  string devToken = 4;
  int32  devTyp = 5;
}


message WSOnlineAck{
  bool Success = 1;
  int64 Seq = 2;
}

message WSCryptoMsg{
  string From = 1;
  string To = 3;
  bytes PayLoad = 5;
  int64 UnixTime = 6;
}

message WSPullUnread{
  string Receiver = 1;
  int64 FromUnixTime = 2;
}

message WSUnreadAck{
  string nodeID = 1;
  string receiver = 2;
  repeated  WSCryptoMsg payload = 3;
}

message WsMsg{
  bytes Hash = 1;
  bytes Sig = 2;
  WsMsgType typ = 3;
  oneof payload{
    WSOnline online = 4;
    WSOnlineAck olAck = 5;
    WSCryptoMsg message = 6;
    WSPullUnread unread = 7;
    WSUnreadAck unreadAck = 8;
  };
}
